--- a/01-GNB/01/css/style.css
+++ b/01-GNB/01/css/style.css
@@ -49,11 +49,12 @@ header nav {
 
 .submenu {
   position: absolute;
-  top: 48px;
+  top: 43px;
   left: 0;
   width: 100%;
   /* jQuery로 동작을 만들기 위한 준비 */
   display: none;
+  padding-top: 30px;
 }
 .submenu li a {
   display: block;
@@ -69,6 +70,10 @@ header nav {
   height: 100%;
   margin: 0 auto;
   background: rgba(255, 255, 0, 0.15);
+}
+/* 활성화된 메뉴 디자인 */
+.gnb > li.on {
+  background: skyblue;
 }
 
 main {
