--- a/02-FAQ/01/css/style.css
+++ b/02-FAQ/01/css/style.css
@@ -53,6 +53,7 @@ li {
   top: 50%;
   right: 0;
   transform: translateY(-50%) rotate(135deg);
+  transition: 0.3s;
 }
 
 .answer-wrap {
@@ -61,4 +62,13 @@ li {
   margin-top: 20px;
 
   display: none;
+}
+
+/* 선택한 질문에 대한 디자인 */
+.faq-wrap > ul > li.on > strong {
+  color: #f00;
+}
+.faq-wrap > ul > li.on > strong::after {
+  border-color: #f00;
+  transform: translateY(-50%) rotate(315deg);
 }
