--- a/04-popup/04-이미지 동영상 갤러리/css/style.css
+++ b/04-popup/04-이미지 동영상 갤러리/css/style.css
@@ -46,7 +46,7 @@ img {
 .popup {
   position: fixed;
   top: -50%;
-  left: 50px;
+  left: 50%;
   transform: translate(-50%, -50%);
   border: 10px solid #fff;
   opacity: 0;
